Check StyleSheetIsLoading before clearing LinkStyle sheet.

StyleSheetIsLoading() returns true if the top sheet is loaded but has
loading imports. If the top level sheet is cleared before we check the
loading status, we will not appropriately call RemovedPendingSheet()
which may block rendering indefinitely.

R=meade@chromium.org,pmeenan@chromium.org
BUG=718358

Review-Url: https://codereview.chromium.org/2873133002
Cr-Commit-Position: refs/heads/master@{#470943}

Former-commit-id: da87d9568ea3b57d705d9b8caa664f03293af321